--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,12 @@ dependencies {
     implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
 
+    //Accompanist
+    implementation "com.google.accompanist:accompanist-systemuicontroller:0.17.0"
+
+    //Coil
+    implementation "io.coil-kt:coil-compose:1.3.2"
+
     //Coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1"
 
