--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,6 +82,9 @@ dependencies {
     //Ok Http3
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.3'
 
+    //splash screen
+    implementation 'androidx.core:core-splashscreen:1.0.0-beta02'
+
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'com.google.truth:truth:1.1.3'
     testImplementation "androidx.arch.core:core-testing:2.1.0"
