--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,18 @@ plugins {
     id 'kotlin-kapt'
     id 'kotlin-parcelize'
     id 'dagger.hilt.android.plugin'
+    id 'com.google.devtools.ksp' version '1.6.10-1.0.2'
+}
+
+kotlin {
+    sourceSets{
+        release {
+            kotlin.srcDir("build/generated/ksp/release/kotlin")
+        }
+        debug {
+            kotlin.srcDir("build/generated/ksp/debug/kotlin")
+        }
+    }
 }
 
 android {
@@ -24,6 +36,10 @@ android {
 
     buildTypes {
         release {
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+        debug {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
@@ -58,6 +74,10 @@ dependencies {
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
+
+    //Compose Destinations
+    implementation 'io.github.raamcosta.compose-destinations:core:1.5.1-beta'
+    ksp 'io.github.raamcosta.compose-destinations:ksp:1.5.1-beta'
 
     //Accompanist
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.17.0"
