--- a/app/build.gradle
+++ b/app/build.gradle
@@ -105,6 +105,10 @@ dependencies {
     //splash screen
     implementation 'androidx.core:core-splashscreen:1.0.0-beta02'
 
+    //Mockito
+    testImplementation "org.mockito:mockito-core:3.10.0"
+    testImplementation 'org.mockito:mockito-inline:2.13.0'
+
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'com.google.truth:truth:1.1.3'
     testImplementation "androidx.arch.core:core-testing:2.1.0"
